--- a/index.html
+++ b/index.html
@@ -267,15 +267,15 @@
                     </li>
                     <li class="contact-info">
                         <i class="fa-regular fa-clock"></i>
-                        <p>Monday - Friday: 9:00 AM - 5:00 PM</p>
+                        <p>Monday - Friday: 7:00 AM - 9:00 PM</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-regular fa-clock"></i>
-                        <p>Saturday: 10:00 AM - 3:00 PM</p>
+                        <p>Saturday: 7:00 AM - 9:00 PM</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-regular fa-clock"></i>
-                        <p>Sunday: Closed</p>
+                        <p>Sunday: 7:00 AM - 5:00 PM</p>
                     </li>
                     <li class="contact-info">
                         <i class="fa-solid fa-globe"></i>
@@ -356,7 +356,7 @@
                 </div>
             </footer>
             <div class="section-content">
-                <p class="copyright-text">© 2024 Coffee Shop</p>
+                <p class="copyright-text">© 2005 Passerelles Numeriques Cambodia</p>
                 <div class="social-link-list">
                     <a href="#" class="social-link"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#" class="social-link"><i class="fa-brands fa-instagram"></i></a>
