--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>PNC Lifestyle</title>
     <link rel="stylesheet" href="css/style1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -17,6 +17,7 @@
                 <h2 class="logo-text"><img src="imges/PN-Logo-English-White-Baseline.png" alt=""></h2>
             </a>
             <ul class="nav-menu">
+                <button id="menu-close-button" class="fas fa-times"></button>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Home</a>
                 </li>
@@ -39,6 +40,7 @@
                     <a href="#map" class="nav-link">Google Map</a>
                 </li>
             </ul>
+            <button id="menu-open-button" class="fas fa-bars"></button>
         </nav>
     </header>
     <section class="home" id="home">
@@ -49,7 +51,7 @@
                     2005, in Phnom Penh. PNC offers two IT training programs in System and Network Administration (SNA)
                     and Web Programming (WEP), based on a holistic educative approach including technical and soft
                     skills, and a personal development programa <span class="typing"></span></div>
-                <a href="#">Hire me</a>
+                <a href="#">Join Us</a>
             </div>
         </div>
     </section>
@@ -370,5 +372,7 @@
             </div>
         </footer>
         </main>
+        <script src="main.js"></script>
 </body>
+
 </html>
